# crackingDocumentsDemo

./: LICENSE  Makefile  README.md
.github/workflows/: infra.yml
docs/: ARCHITECTURE.md  AZURE_DEPLOYMENT.md  DEPLOYMENT_WORKFLOW.md  LOCAL_SETUP.md  SCREENSHOTS.md
docs/images/: README.md
infra/: main.bicep  main.bicepparam
infra/modules/: connections.bicep  (+5 more)
scripts/: capture-screenshots.sh  deploy-containers.sh  deploy.sh  setup-local-env.sh  setup-model-builder.sh
src/: .env.example  Makefile  README.md  SETUP.md  docker-compose.yml
src/api/document-api/: .dockerignore  Dockerfile  README.md  boostrapper.py  config.py  dependencies.py  main.py  pyproject.toml  requirements.txt  tmp.py
src/api/document-api/contract/: __init__.py  document_info.py
src/api/document-api/infrastructure/: __init__.py  analyzer.py  enums.py
src/api/document-api/models/: __init__.py  doc_model.py  document_response.py
src/api/document-api/routes/: __init__.py  document.py
src/api/document-api/services/: __init__.py  base_document_service.py  content_understanding_client.py  document_service.py
src/api/valet-api/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
src/api/valet-api/service/: storage_service.py
src/utility/modelBuilder/: config.py  main.py  pyproject.toml
src/utility/modelBuilder/models/: __init__.py  analyzer.py
src/utility/modelBuilder/schema/: invoice_model_prebuilt-documentAnalyzer_2025-05-01-preview.json
src/utility/modelBuilder/services/: __init__.py  content_understanding_client.py  document_service.py  storage_service.py
(+36 files in other folders)
